# AI-Agent-for-a-Commerce-Website

./: .gitignore  README.md  app.py  create_db.py  mcp.py  pyproject.toml  traces.py  transactional_db.py
agent/: orchestrator.py  tools.py
guardrails/: sanitization.py
observability/: traces.py
retrieval/: embedder.py
static/: style.css
templates/: base.html  index.html
