[project]
name = "palona-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clip>=0.2.0",
    "flask>=3.1.3",
    "langchain>=1.2.13",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "markdown>=3.10.2",
    "mcp>=1.26.0",
    "numpy>=2.4.3",
    "open-clip-torch>=3.3.0",
    "openai>=2.30.0",
    "pandas>=3.0.1",
    "pgvector>=0.4.2",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.5",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "transformers>=5.4.0",
]
